force-app/main/default/objects/Insurance_Cross_Sale__c/Insurance_Cross_Sale__c.object-meta.xml
<CustomObject>
    <label>Insurance Cross Sell</label>
    <nameField>
        <label>Insurance Cross Sell Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Cross Sells</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>