force-app/main/default/objects/Insurance_Cross_Sale__c/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <label>Converted</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>