force-app/main/default/objects/Insurance_Cross_Sale__c/fields/Leads_Changed__c.field-meta.xml
<CustomField>
    <fullName>Leads_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leads Changed</label>
    <type>Checkbox</type>
</CustomField>