force-app/main/default/objects/Insurance_Cross_Sale__c/fields/Recalculate__c.field-meta.xml
<CustomField>
    <fullName>Recalculate__c</fullName>
    <formula>IF( Leads_Changed__c, HYPERLINK(&quot;/apex/Insurance_Cross_Sales_Analysys?id=&quot;+Id , &quot;Need to recalculate analysis&quot; , &quot;_top&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recalculate</label>
    <type>Text</type>
</CustomField>