force-app/main/default/objects/Insurance_Cross_Sale__c/fields/Rejected__c.field-meta.xml
<CustomField>
    <fullName>Rejected__c</fullName>
    <label>Rejected</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>