force-app/main/default/objects/Insurance_Cross_Sale__c/fields/Responded__c.field-meta.xml
<CustomField>
    <fullName>Responded__c</fullName>
    <label>Responded</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>