force-app/main/default/objects/Insurance_Cross_Sale__c/fields/Responded_Rate__c.field-meta.xml
<CustomField>
    <fullName>Responded_Rate__c</fullName>
    <description>Google API Chart Sent Vs. Responded</description>
    <formula>IMAGE(&quot;http://chart.apis.google.com/chart?cht=p3&amp;chd=t:&quot; &amp; 
 Text(Sent__c/(Sent__c+ Responded__c)) &amp; &quot;,&quot; &amp; 
Text(Responded__c/(Sent__c+ Responded__c)) &amp; 
 &quot;&amp;chs=275x100&amp;chf=bg,s,F3F3EC&amp;chl=Sent|Responded&amp;chco=5555ff&quot;, 
 &quot;Sent vs. Responded Chart&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sent Vs. Responded</inlineHelpText>
    <label>Responded Rate</label>
    <type>Text</type>
</CustomField>